Bug 1283417 - part1 : implement function to notify cue's display states changed. r=bechen

MozReview-Commit-ID: AF2S2UOLCt1